[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
gmx-types = { path = "../../libs/types" }
gmx-keys  = { path = "../../libs/keys" }
role-store = { path = "../role_store" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
role-store  = { path = "../role_store" }
data-store  = { path = "../data_store" }
gmx-math    = { path = "../../libs/math" }
oracle      = { path = ".", features = ["testutils"] }
