[package]
name = "withdrawal-handler"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk      = { workspace = true }
gmx-types        = { path = "../../libs/types" }
gmx-math         = { path = "../../libs/math" }
gmx-keys         = { path = "../../libs/keys" }
gmx-market-utils = { path = "../../libs/market_utils" }

[dev-dependencies]
soroban-sdk       = { workspace = true, features = ["testutils"] }
role-store        = { path = "../role_store" }
data-store        = { path = "../data_store" }
oracle            = { path = "../oracle", features = ["testutils"] }
withdrawal-vault  = { path = "../withdrawal_vault" }
deposit-vault     = { path = "../deposit_vault" }
market-token      = { path = "../market_token" }
deposit-handler   = { path = "../deposit_handler" }
