[package]
name = "gmx-increase-position-utils"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
soroban-sdk           = { workspace = true }
gmx-types             = { path = "../types" }
gmx-math              = { path = "../math" }
gmx-keys              = { path = "../keys" }
gmx-market-utils      = { path = "../market_utils" }
gmx-position-utils    = { path = "../position_utils" }
gmx-pricing-utils     = { path = "../pricing_utils" }

[dev-dependencies]
soroban-sdk   = { workspace = true, features = ["testutils"] }
role-store    = { path = "../../contracts/role_store" }
data-store    = { path = "../../contracts/data_store" }
oracle        = { path = "../../contracts/oracle", features = ["testutils"] }
order-vault   = { path = "../../contracts/order_vault" }
market-token  = { path = "../../contracts/market_token" }
